fix side nav bugs, align icons with self and text, on open side nav adjust main content margin

--- a/css/apps/emails/cmps/email-details.css
+++ b/css/apps/emails/cmps/email-details.css
@@ -1,6 +1,7 @@
 .email-details-container {
     padding: 1rem 2rem;
     position: relative;
+    margin-inline-start: 3.5rem;
 }
 
 .email-details-container .back {
