--- a/css/basic/layout.css
+++ b/css/basic/layout.css
@@ -2,3 +2,11 @@
   max-width: 980px;
   margin: 0 auto;
 }
+
+.email-container.open-side {
+  margin-inline-start: 10rem;
+}
+
+.email-details-container.open-side {
+  margin-inline-start: 14rem;
+}
