--- a/css/cmps/app-side.css
+++ b/css/cmps/app-side.css
@@ -1,38 +1,3 @@
-/* .side-nav {
-  position: relative;
-  padding: 0.5rem 0.5rem 0 0;
-  border-inline-end: 0.05rem solid rgba(255, 255, 255, 0.11);
-}
-
-.side-nav > * {
-  font-family: Roboto-regular;
-}
-
-.side-nav .nav-btn {
-  border-radius: 0 1.1rem 1.1rem 0;
-  border: 0.1em solid transparent;
-  background-color: transparent;
-  padding: 0.4rem;
-  font-size: 0.9rem;
-  text-align: start;
-  color: var(--clr4);
-  cursor: pointer;
-}
-
-.side-nav .nav-btn i {
-  margin-inline-end: 1rem;
-  margin-inline-start: 0.5rem;
-}
-
-.side-nav .nav-btn:hover {
-  background-color: rgba(240, 222, 85, 0.285);
-}
-
-.nav-btn.active {
-  background-color: rgba(240, 222, 85, 0.762);
-  font-family: Roboto-bold;
-} */
-
 .side-nav {
   position: fixed;
   top: 149px;
@@ -47,19 +12,21 @@
 }
 
 .side-nav ul li a {
-  display: block;
+  display: flex;
   color: inherit;
   padding: 0.4rem;
   border-radius: 0 1.1rem 1.1rem 0;
   font-family: Roboto-regular;
   color: var(--clr4);
+  cursor: pointer;
 }
 
 .side-nav ul li a .icon {
   font-size: 1.2rem;
   vertical-align: middle;
-  margin-inline-end: 1rem;
   margin-inline-start: 0.5rem;
+  padding-inline-start: 0.1rem;
+  flex-basis: 18%;
 }
 
 .side-nav ul li a .text {
@@ -68,7 +35,7 @@
 
 .side-nav ul li a:hover {
   background-color: rgba(240, 222, 85, 0.285);
-  color: #fff;
+  color: var(--gray5);
 }
 
 .hover-collapse .side-nav {
@@ -88,15 +55,14 @@
 
 .hover-collapse .side-nav ul li a .icon {
   margin-inline-end: 0;
-  margin-inline-start: 0;
+  margin-inline-start: 0.3rem;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .side-nav ul li a.email-compose {
-  min-width: fit-content;
-  font-size: 1.2rem;
+  max-width: fit-content;
   border-radius: 2rem;
   padding: 0.7rem;
   margin-block-end: 0.7rem;
@@ -108,4 +74,20 @@
 
 .side-nav ul li a.email-compose span.icon {
   margin-right: 0.3rem;
+  text-align: center;
+}
+
+.side-nav ul li a.email-compose span.text {
+  font-size: 1.2rem;
+  font-family: Roboto-Bold;
+  margin-right: 1rem;
+}
+
+.side-nav ul li a.email-compose:hover {
+  background-color: rgba(240, 222, 85, 0.285);
+  color: var(--gray5);
+}
+
+.hover-collapse .side-nav ul li a.email-compose span.icon {
+  margin-inline-start: 0.2rem;
 }
